alignment fix

--- a/css/styles1.css
+++ b/css/styles1.css
@@ -7,7 +7,7 @@
 
 input[type=text] {
     border: 0px solid rgb(51, 51, 51);
-    border-radius: 10px;
+    border-radius: 5px;
     min-width: 334px; 
     height: 33px;
     line-height: 32px;
